Feat: included styled components dependency and utilized to write vanilla css inline.

--- a/src/Person/Person.css
+++ b/src/Person/Person.css
@@ -1,11 +1,17 @@
 /*global css code*/
 
-.Person {
-    width: 60%;
-    margin: 15px auto;
-    border: 1px solid whitesmoke;
-    box-shadow: 0 2px 3px lightgrey;
-    padding: 16px;
-    text-align: center;
-}
+/*.Person {*/
+/*    width: 60%;*/
+/*    margin: 15px auto;*/
+/*    border: 1px solid whitesmoke;*/
+/*    box-shadow: 0 2px 3px lightgrey;*/
+/*    padding: 16px;*/
+/*    text-align: center;*/
+/*}*/
+/*@media (min-width: 500px) {*/
+/*    .Person{*/
+/*        width: 450px;*/
+/*    }*/
+/*}*/
+
 
