Feat: configured css modules in react.

--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,16 @@
   font-weight: bold;
 }
 
+.Button {
+  background-color: green;
+  color: white;
+  font: inherit;
+  border: 1px solid blue;
+  padding: 8px;
+  cursor: pointer;
+}
+
+.Button:hover {
+  background-color: lightgreen;
+  color: black;
+}
