--- a/src/Person/Person.module.css
+++ b/src/Person/Person.module.css
@@ -14,4 +14,25 @@
 /*    }*/
 /*}*/
 
+.red {
+    color: red;
+}
+
+.bold {
+    font-weight: bold;
+}
+
+.Button {
+    background-color: green;
+    color: white;
+    font: inherit;
+    border: 1px solid blue;
+    padding: 8px;
+    cursor: pointer;
+}
+
+.Button:hover {
+    background-color: lightgreen;
+    color: black;
+}
 
